Update all po files release-7.1

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2018-12-17 02:51+0200\n"
 "Last-Translator: Hazem <moustafagamal@hotmail.com>\n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -4445,9 +4445,6 @@ msgstr ""
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr ""
 
-msgid "Import channels from fallback tuner"
-msgstr ""
-
 msgid "Import from remote receiver URL"
 msgstr ""
 
@@ -5122,6 +5119,9 @@ msgstr "بحث يدوى"
 msgid "Manual transponder"
 msgstr "تردد يدوى"
 
+msgid "Manually import from fallback tuner"
+msgstr ""
+
 msgid "Manufacturer"
 msgstr "الصانع"
 
@@ -5610,6 +5610,11 @@ msgstr ""
 "لا يوجد قرص صلب\n"
 "أو ان القرص الصلب لم يتم تهيئته!"
 
+#
+#, fuzzy
+msgid "No active subservices available."
+msgstr "لا يوجد تحديثات متاحة"
+
 msgid "No age block"
 msgstr ""
 
@@ -5796,6 +5801,15 @@ msgid "Norwegian"
 msgstr "نرويجى"
 
 msgid "Not Defined"
+msgstr "غير محددة"
+
+#
+#, fuzzy
+msgid "Not Installed"
+msgstr "تثبيت"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "غير محددة"
 
 msgid "Not associated"
@@ -12106,6 +12120,14 @@ msgstr "تخطى للخلف"
 
 msgid "skip forward"
 msgstr "تخطى للأمام"
+
+#, python-format
+msgid "slot%s - %s"
+msgstr ""
+
+#, python-format
+msgid "slot%s - %s (current image)"
+msgstr ""
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
