--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -4788,9 +4788,6 @@ msgstr "Ze záložního přijímače se importují programy a/nebo EPG po spušt
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Ze záložního přijímače se importují programy a/nebo EPG také v případě, že jsou přijímač nebo enigma2 zrestartovány."
 
-msgid "Import channels from fallback tuner"
-msgstr "Import ze záložního přijímače"
-
 msgid "Import from remote receiver URL"
 msgstr "Importovat ze záložního přijímače"
 
@@ -5491,6 +5488,10 @@ msgstr "Ruční prohledávání"
 msgid "Manual transponder"
 msgstr "ručně definovaný transpondér"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Importovat časovače ze záložního přijímače"
+
 #
 msgid "Manufacturer"
 msgstr "Výrobce"
@@ -5995,6 +5996,11 @@ msgstr "Žádné dostupné ECMPids (FTA program)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Žádný HDD nenalezen nebo není inicializován!"
 
+#
+#, fuzzy
+msgid "No active subservices available."
+msgstr " Žádné dostupné aktualizace."
+
 msgid "No age block"
 msgstr "neblokovat"
 
@@ -6196,6 +6202,15 @@ msgid "Norwegian"
 msgstr "Norsky"
 
 msgid "Not Defined"
+msgstr "Nedefinován"
+
+#
+#, fuzzy
+msgid "Not Installed"
+msgstr "Instalovat"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Nedefinován"
 
 msgid "Not associated"
@@ -12971,6 +12986,14 @@ msgstr "Přeskočit dozadu"
 #
 msgid "skip forward"
 msgstr "Přeskočit dopředu"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "Slot%s - %s mód 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "Slot%s - %s mód 1 (aktuální image)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
