--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -4748,9 +4748,6 @@ msgstr ""
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr ""
 
-msgid "Import channels from fallback tuner"
-msgstr ""
-
 #, fuzzy
 msgid "Import from remote receiver URL"
 msgstr "Fallback remote receiver URL"
@@ -5449,6 +5446,9 @@ msgstr "Manuel søgning"
 msgid "Manual transponder"
 msgstr "Manuel transponder"
 
+msgid "Manually import from fallback tuner"
+msgstr ""
+
 #
 msgid "Manufacturer"
 msgstr "Fabrikant"
@@ -5956,6 +5956,10 @@ msgstr ""
 "Ingen HDD fundet eller\n"
 "HDD ikke initialiseret!."
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Ingen opdateringer tilgængelig."
+
 msgid "No age block"
 msgstr "Ingen aldersbegrænsning"
 
@@ -6158,6 +6162,15 @@ msgid "Norwegian"
 msgstr "Norsk"
 
 msgid "Not Defined"
+msgstr "Ikke defineret"
+
+#
+#, fuzzy
+msgid "Not Installed"
+msgstr "Installer"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Ikke defineret"
 
 msgid "Not associated"
@@ -12926,6 +12939,14 @@ msgstr "drop tilbage"
 #
 msgid "skip forward"
 msgstr "drop fremad"
+
+#, python-format
+msgid "slot%s - %s"
+msgstr ""
+
+#, python-format
+msgid "slot%s - %s (current image)"
+msgstr ""
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
