--- a/po/el.po
+++ b/po/el.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLI Enigma2 Official Greek Translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: MCelliotG <mcelliotg@gmail.com>\n"
 "Language-Team: MCelliotG <mcelliotg@gmail.com>\n"
@@ -4198,9 +4198,6 @@ msgstr "Εισαγωγή καναλιών ή/και EPG από την απομα
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Εισαγωγή καναλιών ή/και EPG από την απομακρυσμένη URL δέκτη κατά την εκκίνηση του δέκτη ή του enigma2"
 
-msgid "Import channels from fallback tuner"
-msgstr "Εισαγωγή καναλιών από το εφεδρικό tuner"
-
 msgid "Import from remote receiver URL"
 msgstr "Εισαγωγή από απομακρυσμένη URL δέκτη"
 
@@ -4794,6 +4791,10 @@ msgstr "Χειροκίνητη ανίχνευση"
 msgid "Manual transponder"
 msgstr "Χειροκίνητος αναμεταδότης"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Ενεργοποίηση εισαγωγής χρονοδιακόπτη από το εφεδρικό tuner"
+
 msgid "Manufacturer"
 msgstr "Κατασκευαστής"
 
@@ -5225,6 +5226,10 @@ msgstr "Μη διαθέσιμα ECMPids (FTA Υπηρεσία)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Δεν βρέθηκε σκληρός δίσκος ή δεν έχει γίνει αρχικοποίηση!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Δεν υπάρχουν διαθέσιμες ενημερώσεις"
+
 msgid "No age block"
 msgstr "Χωρίς ηλικιακό μπλοκάρισμα"
 
@@ -5394,6 +5399,14 @@ msgid "Norwegian"
 msgstr "Νορβηγικά"
 
 msgid "Not Defined"
+msgstr "Απροσδιόριστο"
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "Εγκατάσταση"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Απροσδιόριστο"
 
 msgid "Not associated"
@@ -11275,6 +11288,14 @@ msgstr "μεταπήδηση πίσω"
 
 msgid "skip forward"
 msgstr "μεταπήδηση εμπρός"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "θέση%s - %s λειτουργία 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "θέση%s - %s λειτουργία 1 (τρέχον image)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
