--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2018-12-29 02:52+0100\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: SFTEAM  angelo2807@hotmail.com\n"
@@ -4676,9 +4676,6 @@ msgstr "Importe canales y / o EPG desde la URL del receptor remoto cuando se ini
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Importe canales y / o EPG desde la URL del receptor remoto cuando se reinicie el receptor o enigma2"
 
-msgid "Import channels from fallback tuner"
-msgstr "Importar canales desde el sintonizador de respaldo"
-
 msgid "Import from remote receiver URL"
 msgstr "Importar desde el receptor remoto URL"
 
@@ -5357,6 +5354,10 @@ msgstr "Exploración manual"
 msgid "Manual transponder"
 msgstr "Transponder manual"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Habilitar el temporizador de importación desde el sintonizador de retroceso"
+
 #
 msgid "Manufacturer"
 msgstr "Fabricante"
@@ -5852,6 +5853,11 @@ msgstr "No ECMPids disponible (Servicio FTA)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "¡HDD no encontrado o no inicializado!"
 
+#
+#, fuzzy
+msgid "No active subservices available."
+msgstr "No hay actualizaciones disponibles"
+
 msgid "No age block"
 msgstr "Sin bloqueo de edad"
 
@@ -6048,6 +6054,15 @@ msgid "Norwegian"
 msgstr "Noruego"
 
 msgid "Not Defined"
+msgstr "No Definido"
+
+#
+#, fuzzy
+msgid "Not Installed"
+msgstr "Instalar"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "No Definido"
 
 msgid "Not associated"
@@ -12681,6 +12696,14 @@ msgstr "saltar adelante"
 #
 msgid "skip forward"
 msgstr "saltar adelante"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "ranura% s -% s modo 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "ranura% s -% s modo 1 (imagen actual)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
