--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Openpli\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2019-04-03 06:49+0300\n"
 "Last-Translator: \n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas, zeros\\n faas, sateks, valgekotkas, tigekala, rootsikunn\\n kain, i70, mustkass, pelmeen, Scott\\n <digi-tv.ee>\n"
@@ -4214,9 +4214,6 @@ msgstr ""
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr ""
 
-msgid "Import channels from fallback tuner"
-msgstr ""
-
 msgid "Import from remote receiver URL"
 msgstr "Impordi kaugvastuvõtja URL-ist"
 
@@ -4809,6 +4806,9 @@ msgstr "Käsiotsing"
 msgid "Manual transponder"
 msgstr "Käsitsi sisestatud transponder"
 
+msgid "Manually import from fallback tuner"
+msgstr ""
+
 msgid "Manufacturer"
 msgstr "Tootja"
 
@@ -5243,6 +5243,10 @@ msgstr "ECMPid pole saadaval (FTA teenus)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Kõvaketast ei leitud või seda pole formaaditud!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Uuendusi ei ole"
+
 msgid "No age block"
 msgstr "Vanusepiiranguta"
 
@@ -5413,6 +5417,14 @@ msgid "Norwegian"
 msgstr "Norra"
 
 msgid "Not Defined"
+msgstr "Määramata"
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "Paigalda"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Määramata"
 
 msgid "Not associated"
@@ -11362,6 +11374,14 @@ msgstr "mine tagasi"
 
 msgid "skip forward"
 msgstr "mine edasi"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "pilu%s - %s mood 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "pilu%s - %s mood 1 (praegune tarkvara)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
