--- a/po/fa.po
+++ b/po/fa.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2018-02-14 16:51+0330\n"
 "Last-Translator: Persian Prince <persianprince@pe4k.com>\n"
 "Language-Team: Persian Professionals <persianpros@yahoo.com>\n"
@@ -4300,9 +4300,6 @@ msgstr ""
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr ""
 
-msgid "Import channels from fallback tuner"
-msgstr ""
-
 msgid "Import from remote receiver URL"
 msgstr ""
 
@@ -4926,6 +4923,9 @@ msgstr "اسکن دستی"
 msgid "Manual transponder"
 msgstr "ترانسپوندر دستی"
 
+msgid "Manually import from fallback tuner"
+msgstr ""
+
 #
 msgid "Manufacturer"
 msgstr "تولید کننده"
@@ -5378,6 +5378,11 @@ msgstr ""
 msgid "No HDD found or HDD not initialized!"
 msgstr "هارد پیدا نشد و یا هارد مقدار دهی اولیه نشده است"
 
+#
+#, fuzzy
+msgid "No active subservices available."
+msgstr "به روز رسانی های در دسترس"
+
 msgid "No age block"
 msgstr ""
 
@@ -5558,6 +5563,13 @@ msgid "Norwegian"
 msgstr "نروژی"
 
 msgid "Not Defined"
+msgstr ""
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "نصب"
+
+msgid "Not Required"
 msgstr ""
 
 msgid "Not associated"
@@ -11493,6 +11505,14 @@ msgid "skip backward"
 msgstr ""
 
 msgid "skip forward"
+msgstr ""
+
+#, python-format
+msgid "slot%s - %s"
+msgstr ""
+
+#, python-format
+msgid "slot%s - %s (current image)"
 msgstr ""
 
 #, python-format
