--- a/po/fi.po
+++ b/po/fi.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2019-02-13 20:52+0200\n"
 "Last-Translator: jamu\n"
 "Language-Team: BoxFreak/jamu\n"
@@ -4618,9 +4618,6 @@ msgstr "Tuo kanavat ja/tai ohjelmaopas etävastaanottimelta uudelleenkäynnistyk
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Tuo kanavat ja/tai ohjelmaopas etävastaanottimelta uudelleenkäynnistyksen yhteydessä"
 
-msgid "Import channels from fallback tuner"
-msgstr "Tuo kanavat etävastaanottimelta"
-
 msgid "Import from remote receiver URL"
 msgstr "Tuo etävastaanottimelta"
 
@@ -5305,6 +5302,10 @@ msgstr "Manuaalihaku"
 msgid "Manual transponder"
 msgstr "Manuaalinen lähetin"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Tuo ajastimet etävastaaottimelta"
+
 #
 msgid "Manufacturer"
 msgstr "Valmistaja"
@@ -5807,6 +5808,10 @@ msgstr ""
 "Kiintolevyä ei löydy tai sitä ei\n"
 "ole alustettu."
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Ei päivityksiä saatavilla"
+
 msgid "No age block"
 msgstr "Ei ikälukitusta"
 
@@ -6013,6 +6018,16 @@ msgstr "Norja"
 
 #
 msgid "Not Defined"
+msgstr "Ei määritetty"
+
+#
+#, fuzzy
+msgid "Not Installed"
+msgstr "Asenna"
+
+#
+#, fuzzy
+msgid "Not Required"
 msgstr "Ei määritetty"
 
 msgid "Not associated"
@@ -12652,6 +12667,14 @@ msgstr "Siirry taaksepäin"
 #
 msgid "skip forward"
 msgstr "Siirry eteenpäin"
+
+#, python-format
+msgid "slot%s - %s"
+msgstr ""
+
+#, python-format
+msgid "slot%s - %s (current image)"
+msgstr ""
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
