--- a/po/he.po
+++ b/po/he.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2012-03-08 10:40+0330\n"
 "Last-Translator: \n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -4496,9 +4496,6 @@ msgstr ""
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr ""
 
-msgid "Import channels from fallback tuner"
-msgstr ""
-
 msgid "Import from remote receiver URL"
 msgstr ""
 
@@ -5183,6 +5180,9 @@ msgstr "סריקה ידנית"
 msgid "Manual transponder"
 msgstr " ידני transponder"
 
+msgid "Manually import from fallback tuner"
+msgstr ""
+
 msgid "Manufacturer"
 msgstr "יצרן"
 
@@ -5670,6 +5670,11 @@ msgstr ""
 msgid "No HDD found or HDD not initialized!"
 msgstr "! לא נמצא כונן קשיח או לא אותחל"
 
+#
+#, fuzzy
+msgid "No active subservices available."
+msgstr "עדכונים זמינים"
+
 msgid "No age block"
 msgstr ""
 
@@ -5861,6 +5866,14 @@ msgid "Norwegian"
 msgstr "נורווגית"
 
 msgid "Not Defined"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Not Installed"
+msgstr "התקן"
+
+msgid "Not Required"
 msgstr ""
 
 msgid "Not associated"
@@ -12250,6 +12263,14 @@ msgstr "דלג אחורה"
 
 msgid "skip forward"
 msgstr "דלג קדימה"
+
+#, python-format
+msgid "slot%s - %s"
+msgstr ""
+
+#, python-format
+msgid "slot%s - %s (current image)"
+msgstr ""
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
