--- a/po/hr.po
+++ b/po/hr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2019-05-12 07:10+0200\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -4214,9 +4214,6 @@ msgstr "Uvezite kanale i/ili EPG iz udaljenog URL-a primatelja kada se on pokren
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Uvoz kanala i/ili EPG iz URL-a udaljenog primatelja kada se prijemnik ili enigma2 ponovno pokrene"
 
-msgid "Import channels from fallback tuner"
-msgstr "Uvezite kanale iz zamjenskog tjunera"
-
 msgid "Import from remote receiver URL"
 msgstr "Uvoz iz URL-a udaljenog primatelja"
 
@@ -4812,6 +4809,10 @@ msgstr "Ručno pretraživanje"
 msgid "Manual transponder"
 msgstr "Ručni transponder"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Omogućite uvoz tajmera iz zamjenskog tjunera"
+
 msgid "Manufacturer"
 msgstr "Proizvođač"
 
@@ -5243,6 +5244,10 @@ msgstr "Nema dostupnih ECMPid (FTA usluga)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "HDD nije pronađen ili nije inicijaliziran!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Nema dostupnih ažuriranja"
+
 msgid "No age block"
 msgstr "Nema dobne granice"
 
@@ -5412,6 +5417,14 @@ msgid "Norwegian"
 msgstr "Norveški"
 
 msgid "Not Defined"
+msgstr "Nije definirano"
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "Instaliranje"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Nije definirano"
 
 msgid "Not associated"
@@ -11295,6 +11308,14 @@ msgstr "Preskočiti unatrag"
 
 msgid "skip forward"
 msgstr "Preskočiti naprijed"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "utor%s - %s način 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "utor%s - %s način 1 (trenutni image)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
