--- a/po/hu.po
+++ b/po/hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2019-04-23 16:45+0200\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
@@ -4197,9 +4197,6 @@ msgstr "A csatornák és/vagy az EPG importálása a távoli vevő URL címébő
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "A csatornák és/vagy az EPG importálása a távoli vevő URL címéből a kezelőfelület újraindításakor"
 
-msgid "Import channels from fallback tuner"
-msgstr "Csatornák importálása a tartalék tunerből"
-
 msgid "Import from remote receiver URL"
 msgstr "Importálás a távoli vevő URL címéből"
 
@@ -4793,6 +4790,10 @@ msgstr "Kézi keresés"
 msgid "Manual transponder"
 msgstr "Kézi transzponder"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Csatornák importálása a tartalék tunerből"
+
 msgid "Manufacturer"
 msgstr "Gyártó"
 
@@ -5224,6 +5225,10 @@ msgstr "Nincs elérhető EMCPid (FTA csatornák)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Nem észlelhető háttértár, vagy az nem lett inicializálva!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Nincs elérhető frissítés"
+
 msgid "No age block"
 msgstr "Nincs korhatár"
 
@@ -5393,6 +5398,14 @@ msgid "Norwegian"
 msgstr "Norvég"
 
 msgid "Not Defined"
+msgstr "Nincs megadva"
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "Telepítés"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Nincs megadva"
 
 msgid "Not associated"
@@ -11281,6 +11294,14 @@ msgstr "visszaugrás"
 
 msgid "skip forward"
 msgstr "előre ugrás"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "partíció%s - %s készülék mód: 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "partíció%s - %s készülék mód: 1 (jelenlegi image)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
