--- a/po/is.po
+++ b/po/is.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2011-05-07 12:23+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -4618,9 +4618,6 @@ msgstr ""
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr ""
 
-msgid "Import channels from fallback tuner"
-msgstr ""
-
 msgid "Import from remote receiver URL"
 msgstr ""
 
@@ -5335,6 +5332,9 @@ msgstr "Handvirk leitun"
 msgid "Manual transponder"
 msgstr "Handvirk leit á sendi"
 
+msgid "Manually import from fallback tuner"
+msgstr ""
+
 #
 msgid "Manufacturer"
 msgstr "Framleiðandi"
@@ -5851,6 +5851,11 @@ msgstr ""
 msgid "No HDD found or HDD not initialized!"
 msgstr "Fann ekki harðan disk eða hann ekki formaður!"
 
+#
+#, fuzzy
+msgid "No active subservices available."
+msgstr " uppfærslur tiltækar."
+
 msgid "No age block"
 msgstr ""
 
@@ -6056,6 +6061,14 @@ msgid "Norwegian"
 msgstr "Norska"
 
 msgid "Not Defined"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Not Installed"
+msgstr "Setja inn"
+
+msgid "Not Required"
 msgstr ""
 
 #, fuzzy
@@ -12832,6 +12845,14 @@ msgstr "fara til baka"
 #
 msgid "skip forward"
 msgstr "fara áfram"
+
+#, python-format
+msgid "slot%s - %s"
+msgstr ""
+
+#, python-format
+msgid "slot%s - %s (current image)"
+msgstr ""
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
