--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi-enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2018-05-22 13:54+0200\n"
 "Last-Translator: Gringo <openpli@tiscali.it>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -4231,9 +4231,6 @@ msgstr "Importare i canali e/o l'EPG dall'URL del ricevitore remoto quando il ri
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Importare i canali e/o l'EPG dall'URL del ricevitore remoto quando il ricevitore o Enigma2 viene riavviato"
 
-msgid "Import channels from fallback tuner"
-msgstr "Importare i canali dal sintonizzatore di fallback"
-
 msgid "Import from remote receiver URL"
 msgstr "Importare dall'URL del ricevitore remoto"
 
@@ -4831,6 +4828,10 @@ msgstr "Ricerca manuale"
 msgid "Manual transponder"
 msgstr "Transponder definito dall'utente"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Importare i canali dal sintonizzatore di fallback"
+
 msgid "Manufacturer"
 msgstr "Produttore"
 
@@ -5265,6 +5266,10 @@ msgstr "ID ECM non disponibili (Canale FTA)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Disco rigido non trovato o non formattato!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Nessun aggiornamento disponibile"
+
 msgid "No age block"
 msgstr "Nessun blocco per età"
 
@@ -5435,6 +5440,14 @@ msgid "Norwegian"
 msgstr "Norvegese"
 
 msgid "Not Defined"
+msgstr "Non definito"
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "Installare"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Non definito"
 
 msgid "Not associated"
@@ -11399,6 +11412,14 @@ msgstr "Riavvolgimento"
 
 msgid "skip forward"
 msgstr "Avanzamento"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "slot%s - %s modo 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "slot%s - %s modo 1 (immagine attuale)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
