--- a/po/lt.po
+++ b/po/lt.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2019-03-05 15:26+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
@@ -4219,9 +4219,6 @@ msgstr "Importuoti kanalus ir/arba EPG iš nuotolinio imtuvo URL, kai imtuvas yr
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Importuoti kanalus ir/arba EPG iš nuotolinio imtuvo URL, kai imtuvas arba enigma2 yra paleidžiami iš naujo"
 
-msgid "Import channels from fallback tuner"
-msgstr "Importuoti kanalus iš atsarginio imtuvo"
-
 msgid "Import from remote receiver URL"
 msgstr "Importuoti epg iš nuotolinio imtuvo URL"
 
@@ -4817,6 +4814,10 @@ msgstr "Rankinė paieška"
 msgid "Manual transponder"
 msgstr "Rankinis transponderio pasirinkimas"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Įjungti importo laikmatį iš atsarginio imtuvo"
+
 msgid "Manufacturer"
 msgstr "Gamintojas"
 
@@ -5252,6 +5253,10 @@ msgstr "ECMPids nėra prieinama (FTA kanalui)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Kietas diskas nerastas arba neinicializuotas!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Atnaujinimų nėra"
+
 msgid "No age block"
 msgstr "Be amžiaus ribojimo"
 
@@ -5422,6 +5427,14 @@ msgid "Norwegian"
 msgstr "Norvegų"
 
 msgid "Not Defined"
+msgstr "Neapibrėžta"
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "Įdiegti"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Neapibrėžta"
 
 msgid "Not associated"
@@ -11319,6 +11332,14 @@ msgstr "praleisti sukimą atgal"
 
 msgid "skip forward"
 msgstr "praleisti sukimą į priekį"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "lizdas%s -%s režimas 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "lizdas%s -%s režimas 1 (dabartinis atvaizdas)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
