--- a/po/lv.po
+++ b/po/lv.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2014-11-12 00:49+0200\n"
 "Last-Translator: Taapat <taapat@gmail.com>\n"
 "Language-Team: Taapat <taapat@gmail.com>\n"
@@ -4219,9 +4219,6 @@ msgstr "Importēt kanālus un/vai EPG no attālinātā uztvērēja kad uztvērē
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Importēt kanālus un/vai EPG no attālinātā uztvērēja kad enigma tiek pārstartēta"
 
-msgid "Import channels from fallback tuner"
-msgstr "Importēt kanālus no attālinātā uztvērēja"
-
 msgid "Import from remote receiver URL"
 msgstr "Importēt no attālinātā uztvērēja"
 
@@ -4814,6 +4811,10 @@ msgstr "Manuālā meklēšana"
 msgid "Manual transponder"
 msgstr "Manuāls transponderis"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Importēt taimerus no attālinātā uztvērēja"
+
 msgid "Manufacturer"
 msgstr "Ražotājs"
 
@@ -5245,6 +5246,10 @@ msgstr "ECM pidi nav pieejami (brīvais kanāls)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Nav atrasts vai inicializēts cietais disks!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "atjauninājumi nav pieejami"
+
 msgid "No age block"
 msgstr "Nebloķēt pēc vecuma"
 
@@ -5415,6 +5420,14 @@ msgid "Norwegian"
 msgstr "Norvēģu"
 
 msgid "Not Defined"
+msgstr "Nav definēts"
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "Instalēt"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Nav definēts"
 
 msgid "Not associated"
@@ -11301,6 +11314,14 @@ msgstr "pārlēkt atpakaļ"
 
 msgid "skip forward"
 msgstr "pārlēkt uz priekšu"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "slots%s - %s režīms 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "slots%s - %s režīms 1 (pašreizējais imidžs)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
