--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2019-05-03 17:38+0200\n"
 "Last-Translator: GeirJ <dummy@dummy.com>\n"
 "Language-Team: GeirJ\n"
@@ -4640,9 +4640,6 @@ msgstr "Importer kanaler og/eller EPG fra ekstern mottakeradresse når mottakere
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Importer kanaler og/eller EPG fra ekstern mottakeradresse når mottakeren eller enigma2 har startet på nytt"
 
-msgid "Import channels from fallback tuner"
-msgstr "Importere kanaler fra reserve tuner"
-
 msgid "Import from remote receiver URL"
 msgstr "Importer fra ekstern mottakeradresse"
 
@@ -5328,6 +5325,10 @@ msgstr "Manuelt søk"
 msgid "Manual transponder"
 msgstr "Manuell transponder"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Aktiver import timer fra reserve tuner"
+
 #
 msgid "Manufacturer"
 msgstr "Produsent"
@@ -5815,6 +5816,10 @@ msgstr "Ingen ECM Pids tilgjengelig (FTA kanal)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Ingen lagringsdisk ble funnet!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Det finnes ingen nye oppdateringer"
+
 msgid "No age block"
 msgstr "Ingen aldersgrense"
 
@@ -6009,6 +6014,16 @@ msgstr "Norsk"
 
 #
 msgid "Not Defined"
+msgstr "Ikke angitt"
+
+#
+#, fuzzy
+msgid "Not Installed"
+msgstr "Installer"
+
+#
+#, fuzzy
+msgid "Not Required"
 msgstr "Ikke angitt"
 
 msgid "Not associated"
@@ -12567,6 +12582,14 @@ msgstr "gå tilbake"
 #
 msgid "skip forward"
 msgstr "gå framover"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "slot%s - %s modus 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "slot%s - %s modus 1 (gjeldende bilde)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
