--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -4400,9 +4400,6 @@ msgstr ""
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Indien geactiveerd, dan importeert u de zenders en/of de EPG vanaf de de externe ontvanger als de ontvanger of enigma2 is herstart."
 
-msgid "Import channels from fallback tuner"
-msgstr "Importeer de zenders vanaf de Fallback tuner"
-
 msgid "Import from remote receiver URL"
 msgstr "Importeer div. data vanaf een externe ontvanger"
 
@@ -4995,6 +4992,10 @@ msgstr "Handmatig zoeken"
 msgid "Manual transponder"
 msgstr "Transponder handmatig"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Activeer de import van timers van de Fallback tuner"
+
 msgid "Manufacturer"
 msgstr "Fabrikant"
 
@@ -5428,6 +5429,10 @@ msgstr "Geen ECMPids beschikbaar (FTA zender)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Geen harde schijf gevonden of de harde schijf is niet geïnitialiseerd!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Geen updates beschikbaar."
+
 msgid "No age block"
 msgstr "Geen leeftijdsbeperking"
 
@@ -5597,6 +5602,14 @@ msgid "Norwegian"
 msgstr "Noors"
 
 msgid "Not Defined"
+msgstr "Niet vestgelegd"
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "Installeer"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Niet vestgelegd"
 
 msgid "Not associated"
@@ -11601,6 +11614,14 @@ msgstr "Achteruit springen"
 
 msgid "skip forward"
 msgstr "Vooruit springen"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "slot%s - %s modus 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "slot%s - %s mode 1 (huidige image)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
