--- a/po/sk.po
+++ b/po/sk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2019-02-06 13:41+0100\n"
 "Last-Translator: Andrej Tobola <andrej.tobola@gmail.com>\n"
 "Language-Team: \n"
@@ -4222,9 +4222,6 @@ msgstr "Importovať stanice a/alebo EPG z URL adresy vzdialeného prijímača v 
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Importovať stanice a/alebo EPG z URL adresy vzdialeného prijímača v prípade, že sa prijímač alebo Enigma2 reštartuje"
 
-msgid "Import channels from fallback tuner"
-msgstr "Import staníc zo záložného tuneru"
-
 msgid "Import from remote receiver URL"
 msgstr "Importovať stanice z URL adresy vzdialeného prijímača"
 
@@ -4819,6 +4816,10 @@ msgstr "Ručné vyhľadávanie"
 msgid "Manual transponder"
 msgstr "Transpondér ručne"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Povoliť import časovača zo záložného tuneru"
+
 msgid "Manufacturer"
 msgstr "Výrobca"
 
@@ -5253,6 +5254,10 @@ msgstr "ECMPidy nedostupné (FTA stanica)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Pevný disk nebol nájdený alebo nebol inicializovaný!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Žiadne dostupné aktualizácie"
+
 msgid "No age block"
 msgstr "Bez obmedzenia veku"
 
@@ -5423,6 +5428,14 @@ msgid "Norwegian"
 msgstr "Nórčina"
 
 msgid "Not Defined"
+msgstr "Nedefinované"
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "Inštalovať"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Nedefinované"
 
 msgid "Not associated"
@@ -11315,6 +11328,14 @@ msgstr "skok vzad"
 
 msgid "skip forward"
 msgstr "preskočiť dopredu"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "slot%s - %s mód 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "slot%s - %s mód 1 (aktuálny image)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
