--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2015-08-30 09:00+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -4830,9 +4830,6 @@ msgstr ""
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr ""
 
-msgid "Import channels from fallback tuner"
-msgstr ""
-
 #, fuzzy
 msgid "Import from remote receiver URL"
 msgstr "Naslov rezervnega oddaljenega sprejemnika"
@@ -5537,6 +5534,9 @@ msgstr "Ročno iskanje"
 msgid "Manual transponder"
 msgstr "Ročno vnešeni transponder"
 
+msgid "Manually import from fallback tuner"
+msgstr ""
+
 #
 msgid "Manufacturer"
 msgstr "Proizvajalec"
@@ -6045,6 +6045,10 @@ msgstr ""
 msgid "No HDD found or HDD not initialized!"
 msgstr "Trdega diska ni mogoče dodati!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Posodobitve niso na voljo!"
+
 msgid "No age block"
 msgstr ""
 
@@ -6250,6 +6254,14 @@ msgid "Norwegian"
 msgstr "Norveško"
 
 msgid "Not Defined"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Not Installed"
+msgstr "Namesti"
+
+msgid "Not Required"
 msgstr ""
 
 msgid "Not associated"
@@ -13095,6 +13107,14 @@ msgstr "Preskok nazaj"
 #
 msgid "skip forward"
 msgstr "Preskok naprej"
+
+#, python-format
+msgid "slot%s - %s"
+msgstr ""
+
+#, python-format
+msgid "slot%s - %s (current image)"
+msgstr ""
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
