--- a/po/sr.po
+++ b/po/sr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -4846,9 +4846,6 @@ msgstr ""
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr ""
 
-msgid "Import channels from fallback tuner"
-msgstr ""
-
 msgid "Import from remote receiver URL"
 msgstr ""
 
@@ -5577,6 +5574,9 @@ msgstr "Ručno skeniranje"
 msgid "Manual transponder"
 msgstr "Ručno uneseni transponder"
 
+msgid "Manually import from fallback tuner"
+msgstr ""
+
 #
 msgid "Manufacturer"
 msgstr "Proizvođač"
@@ -6099,6 +6099,11 @@ msgstr ""
 msgid "No HDD found or HDD not initialized!"
 msgstr "Disk nije pronađen ili nije inicijaliziran!"
 
+#
+#, fuzzy
+msgid "No active subservices available."
+msgstr "ažuriranja dostupna."
+
 msgid "No age block"
 msgstr ""
 
@@ -6307,6 +6312,14 @@ msgid "Norwegian"
 msgstr "Norveški"
 
 msgid "Not Defined"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Not Installed"
+msgstr "Instalisati"
+
+msgid "Not Required"
 msgstr ""
 
 msgid "Not associated"
@@ -13177,6 +13190,14 @@ msgstr "preskoči unazad"
 #
 msgid "skip forward"
 msgstr "preskoči unapred"
+
+#, python-format
+msgid "slot%s - %s"
+msgstr ""
+
+#, python-format
+msgid "slot%s - %s (current image)"
+msgstr ""
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
