--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2017-03-05 13:24+0100\n"
 "Last-Translator: Magnus Nilsson <mag_nilsson@hotmail.com>\n"
 "Language-Team: \n"
@@ -4730,9 +4730,6 @@ msgstr ""
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr ""
 
-msgid "Import channels from fallback tuner"
-msgstr ""
-
 #, fuzzy
 msgid "Import from remote receiver URL"
 msgstr "URL för reserv fjärrmottagare"
@@ -5426,6 +5423,9 @@ msgstr "Manuell sökning"
 msgid "Manual transponder"
 msgstr "Manuell transponder"
 
+msgid "Manually import from fallback tuner"
+msgstr ""
+
 #
 msgid "Manufacturer"
 msgstr "Tillverkare"
@@ -5927,6 +5927,10 @@ msgstr ""
 msgid "No HDD found or HDD not initialized!"
 msgstr "Ingen HDD hittad eller HDD inte initierad!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Inga uppdateringar tillgängliga."
+
 msgid "No age block"
 msgstr "Ingen åldersblockering"
 
@@ -6128,6 +6132,15 @@ msgid "Norwegian"
 msgstr "Norska"
 
 msgid "Not Defined"
+msgstr "Inte definerad"
+
+#
+#, fuzzy
+msgid "Not Installed"
+msgstr "Installera"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Inte definerad"
 
 msgid "Not associated"
@@ -12899,6 +12912,14 @@ msgstr "hoppa bakåt"
 #
 msgid "skip forward"
 msgstr "hoppa framåt"
+
+#, python-format
+msgid "slot%s - %s"
+msgstr ""
+
+#, python-format
+msgid "slot%s - %s (current image)"
+msgstr ""
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
