--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OPENPLi\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2015-12-18 21:05+0200\n"
 "Last-Translator: Yetkin AYDIN <yetkina@gmail.com>\n"
 "Language-Team: http://www.hurforum.com <yetkina@gmail.com>\n"
@@ -4256,9 +4256,6 @@ msgstr ""
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr ""
 
-msgid "Import channels from fallback tuner"
-msgstr ""
-
 #, fuzzy
 msgid "Import from remote receiver URL"
 msgstr "Yedek cihaz  URL"
@@ -4860,6 +4857,9 @@ msgstr "Elle Tarama"
 msgid "Manual transponder"
 msgstr "Transponder bilgilerini elle gir"
 
+msgid "Manually import from fallback tuner"
+msgstr ""
+
 msgid "Manufacturer"
 msgstr "Üretici"
 
@@ -5300,6 +5300,10 @@ msgstr ""
 msgid "No HDD found or HDD not initialized!"
 msgstr "HDD bulunamadı veya HDD ilişkilendirilemedi!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Güncelleme yok"
+
 msgid "No age block"
 msgstr "Yaş Engeli Yok"
 
@@ -5474,6 +5478,14 @@ msgid "Norwegian"
 msgstr "Norveççe"
 
 msgid "Not Defined"
+msgstr "Tanımlanmamış"
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "Yükle"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Tanımlanmamış"
 
 msgid "Not associated"
@@ -11450,6 +11462,14 @@ msgstr "Önceki kanala atla"
 
 msgid "skip forward"
 msgstr "Sonraki kanala atla"
+
+#, python-format
+msgid "slot%s - %s"
+msgstr ""
+
+#, python-format
+msgid "slot%s - %s (current image)"
+msgstr ""
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
