--- a/po/uk.po
+++ b/po/uk.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2016-11-17 12:51+0200\n"
 "Last-Translator: vovan43<vovan43@ex.ua>, sety <tim1065@mail.ru>, Irkoff <irkoff@gmail.com>\n"
 "Language-Team: gisclub.tv <http://gisclub.tv/>\n"
@@ -4288,9 +4288,6 @@ msgstr ""
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr ""
 
-msgid "Import channels from fallback tuner"
-msgstr ""
-
 #, fuzzy
 msgid "Import from remote receiver URL"
 msgstr "Запасний URL віддаленого приймача"
@@ -4905,6 +4902,9 @@ msgstr "Ручний пошук"
 msgid "Manual transponder"
 msgstr "Транспондер в ручну"
 
+msgid "Manually import from fallback tuner"
+msgstr ""
+
 msgid "Manufacturer"
 msgstr "Виробник"
 
@@ -5345,6 +5345,10 @@ msgstr ""
 msgid "No HDD found or HDD not initialized!"
 msgstr "HDD не знайдений або не встановлений!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Оновлень поки немає"
+
 msgid "No age block"
 msgstr "Немає вікового обмеження"
 
@@ -5519,6 +5523,14 @@ msgid "Norwegian"
 msgstr "Норвезька"
 
 msgid "Not Defined"
+msgstr "Не визначений"
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "Встановити"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Не визначений"
 
 msgid "Not associated"
@@ -11566,6 +11578,14 @@ msgstr "перемотка назад"
 
 msgid "skip forward"
 msgstr "перемотка вперед"
+
+#, python-format
+msgid "slot%s - %s"
+msgstr ""
+
+#, python-format
+msgid "slot%s - %s (current image)"
+msgstr ""
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
