--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Budiarno Pedode\n"
 "Language-Team: \n"
@@ -4296,9 +4296,6 @@ msgstr "Impor kanal dan/atau EPG dari URL Rx jauh ketika Rx dihidupkan."
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Impor kanal dan/atau EPG dari URL Rx jauh ketika Rx atau enigma2 dimulai ulang"
 
-msgid "Import channels from fallback tuner"
-msgstr "Impor kanal dari penala digunakan"
-
 #, fuzzy
 msgid "Import from remote receiver URL"
 msgstr "Impor dari URL Rx jauh"
@@ -4907,6 +4904,10 @@ msgstr "Pelacakan manual"
 msgid "Manual transponder"
 msgstr "Transponder manual"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Impor kanal dari penala digunakan"
+
 msgid "Manufacturer"
 msgstr "Pabrikan"
 
@@ -5347,6 +5348,10 @@ msgstr "Tidak tersedia ECMPids (Layanan FTA)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Tidak ditemukan HDD atau HDD tidak diformat!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Pembaruan tidak tersedia"
+
 msgid "No age block"
 msgstr "Umur tidak diblokir"
 
@@ -5521,6 +5526,14 @@ msgid "Norwegian"
 msgstr "Norwegia"
 
 msgid "Not Defined"
+msgstr "Tak ditetapkan"
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "Pasang"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Tak ditetapkan"
 
 msgid "Not associated"
@@ -11520,6 +11533,14 @@ msgstr "lewatkan mundur"
 
 msgid "skip forward"
 msgstr "lewatkan maju"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "slot%s - %s, dgn cadangan"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "slot%s - %s mode 1 (image saat ini)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
