--- a/po/pl.po
+++ b/po/pl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
+"POT-Creation-Date: 2019-07-25 10:12+0200\n"
 "PO-Revision-Date: 2019-05-30 21:14+0200\n"
 "Last-Translator: blzr <blzr@o2.pl>\n"
 "Language-Team: \n"
@@ -4214,9 +4214,6 @@ msgstr "Importuj kanały i / lub EPG ze zdalnego odbiornika wtedy, gdy odbiornik
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Importuj kanały i / lub EPG ze zdalnego odbiornika wtedy, gdy odbiornik lub enigma się restartuje"
 
-msgid "Import channels from fallback tuner"
-msgstr "Importuj kanały z rezerwowego tunera"
-
 msgid "Import from remote receiver URL"
 msgstr "Importuj ze zdalnego odbiornika"
 
@@ -4811,6 +4808,10 @@ msgstr "Skanowanie ręczne"
 msgid "Manual transponder"
 msgstr "Własny transponder"
 
+#, fuzzy
+msgid "Manually import from fallback tuner"
+msgstr "Włącz import timerów z tunera rezerwowego"
+
 msgid "Manufacturer"
 msgstr "Producent"
 
@@ -5242,6 +5243,10 @@ msgstr "Brak ECM pid (kanał FTA)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Nie znaleziono HDD lub dysk nie jest zainicjowany!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Brak dostępnych aktualizacji."
+
 msgid "No age block"
 msgstr "Brak ograniczeń"
 
@@ -5411,6 +5416,14 @@ msgid "Norwegian"
 msgstr "Norweski"
 
 msgid "Not Defined"
+msgstr "Niezdefiniowany"
+
+#, fuzzy
+msgid "Not Installed"
+msgstr "Instalacja"
+
+#, fuzzy
+msgid "Not Required"
 msgstr "Niezdefiniowany"
 
 msgid "Not associated"
@@ -11300,6 +11313,14 @@ msgstr "Skocz wstecz"
 
 msgid "skip forward"
 msgstr "Skocz w przód"
+
+#, fuzzy, python-format
+msgid "slot%s - %s"
+msgstr "slot%s - %s tryb 1"
+
+#, fuzzy, python-format
+msgid "slot%s - %s (current image)"
+msgstr "slot%s - %s tryb 1 (aktualne image)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
